--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -20,6 +20,8 @@ en:
           resource_type_sim: "Resource type"
       filters:
         title:    "Filtering by:"
+      form:
+        pages:    "Find Pages"
       start_over: Clear filters
   errors:
     messages:
