--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -22,7 +22,8 @@ en:
         title:    "Filtering by:"
       form:
         collection: "Search within this newspaper"
-        pages:    "Search within this newspaper"
+        pages: "Search within this newspaper"
+        front_pages: "All front pages"
       start_over: Clear filters
   errors:
     messages:
