Added German and Spanish language support.

--- a/config/locales/newspaper_container.de.yml
+++ b/config/locales/newspaper_container.de.yml
@@ -4,5 +4,5 @@ de:
       newspaper_container:     'fa fa-newspaper-o'
     select_type:
       newspaper_container:
-        name:               "Newspaper Container"
-        description:        "Newspaper container Werke"
+        name:               "Zeitungscontainer"
+        description:        "Zeitungscontainer Arbeit"
