--- a/config/locales/newspaper_article.de.yml
+++ b/config/locales/newspaper_article.de.yml
@@ -4,5 +4,9 @@ de:
       newspaper_article:     'fa fa-newspaper-o'
     select_type:
       newspaper_article:
-        name:               "Newspaper Article"
-        description:        "Newspaper article Werke"
+        name:               "Zeitungsartikel"
+        description:        "Zeitungsartikel Werke"
+  simple_form:
+    labels:
+      newspaper_article:
+        alternative_title: "Untertitel"
