--- a/config/locales/newspaper_container.es.yml
+++ b/config/locales/newspaper_container.es.yml
@@ -4,7 +4,5 @@ es:
       newspaper_container:     'fa fa-newspaper-o'
     select_type:
       newspaper_container:
-        # TODO: translate `human_name` into Spanish
-        name:               "Newspaper Container"
-        # TODO: translate `human_name` into Spanish
-        description:        "Newspaper container trabajos"
+        name:               "Contenedor de periodico"
+        description:        "Trabajos de contenedor de periódico"
