--- a/config/locales/newspaper_issue.es.yml
+++ b/config/locales/newspaper_issue.es.yml
@@ -4,7 +4,5 @@ es:
       newspaper_issue:     'fa fa-newspaper-o'
     select_type:
       newspaper_issue:
-        # TODO: translate `human_name` into Spanish
-        name:               "Newspaper Issue"
-        # TODO: translate `human_name` into Spanish
-        description:        "Newspaper issue trabajos"
+        name:               "Edición del periódico"
+        description:        "Trabajos de publicación de periódicos"
