--- a/config/locales/newspaper_page.es.yml
+++ b/config/locales/newspaper_page.es.yml
@@ -2,12 +2,14 @@ es:
   hyrax:
     icons:
       newspaper_page:     'fa fa-newspaper-o'
+    select_type:
+      newspaper_page:
+        name:               "Página del periódico"
+        description:        "Página de periódico funciona"
     newspaper_page:
       previous_page: 'Anterior'
       next_page: 'Siguiente'
-    select_type:
+  simple_form:
+    labels:
       newspaper_page:
-        # TODO: translate `human_name` into Spanish
-        name:               "Newspaper Page"
-        # TODO: translate `human_name` into Spanish
-        description:        "Newspaper page trabajos"
+        title: "Siguiente"
