--- a/config/locales/newspaper_title.de.yml
+++ b/config/locales/newspaper_title.de.yml
@@ -4,5 +4,5 @@ de:
       newspaper_title:     'fa fa-newspaper-o'
     select_type:
       newspaper_title:
-        name:               "Newspaper Title"
-        description:        "Newspaper title Werke"
+        name:               "Zeitungstitel"
+        description:        "Zeitungstitel Arbeit"
