Added French language support.

--- a/config/locales/newspaper_issue.fr.yml
+++ b/config/locales/newspaper_issue.fr.yml
@@ -4,5 +4,5 @@ fr:
       newspaper_issue:     'fa fa-newspaper-o'
     select_type:
       newspaper_issue:
-        name:               "Newspaper Issue"
-        description:        "Newspaper issue œuvres"
+        name:               "Numéro de journal"
+        description:        "Le journal fonctionne"
