--- a/config/locales/newspaper_article.fr.yml
+++ b/config/locales/newspaper_article.fr.yml
@@ -4,5 +4,9 @@ fr:
       newspaper_article:     'fa fa-newspaper-o'
     select_type:
       newspaper_article:
-        name:               "Newspaper Article"
-        description:        "Newspaper article œuvres"
+        name:               "Article de journal"
+        description:        "Article de journal fonctionne"
+  simple_form:
+    labels:
+      newspaper_article:
+        alternative_title: "Sous-titre
