--- a/config/locales/newspaper_title.fr.yml
+++ b/config/locales/newspaper_title.fr.yml
@@ -4,5 +4,5 @@ fr:
       newspaper_title:     'fa fa-newspaper-o'
     select_type:
       newspaper_title:
-        name:               "Newspaper Title"
-        description:        "Newspaper title œuvres"
+        name:               "Titre du journal"
+        description:        "Titre de journal fonctionne"
