Added Italian language support.

--- a/config/locales/newspaper_container.it.yml
+++ b/config/locales/newspaper_container.it.yml
@@ -4,5 +4,5 @@ it:
       newspaper_container:     'fa fa-newspaper-o'
     select_type:
       newspaper_container:
-        name:               "Newspaper Container"
-        description:        "Newspaper container opere"
+        name:               "Contenitore per giornali"
+        description:        "Il contenitore del giornale funziona"
