--- a/config/locales/newspaper_article.it.yml
+++ b/config/locales/newspaper_article.it.yml
@@ -4,5 +4,9 @@ it:
       newspaper_article:     'fa fa-newspaper-o'
     select_type:
       newspaper_article:
-        name:               "Newspaper Article"
-        description:        "Newspaper article opere"
+        name:               "Articolo di giornale"
+        description:        "Articoli per articoli di giornale"
+  simple_form:
+    labels:
+      newspaper_article:
+        alternative_title: "Sottotitolo"
