--- a/config/locales/newspaper_issue.it.yml
+++ b/config/locales/newspaper_issue.it.yml
@@ -4,5 +4,5 @@ it:
       newspaper_issue:     'fa fa-newspaper-o'
     select_type:
       newspaper_issue:
-        name:               "Newspaper Issue"
-        description:        "Newspaper issue opere"
+        name:               "Giornale"
+        description:        "Il problema del giornale funziona"
