--- a/config/locales/newspaper_title.it.yml
+++ b/config/locales/newspaper_title.it.yml
@@ -4,5 +4,5 @@ it:
       newspaper_title:     'fa fa-newspaper-o'
     select_type:
       newspaper_title:
-        name:               "Newspaper Title"
-        description:        "Newspaper title opere"
+        name:               "Titolo del giornale"
+        description:        "Titolo del giornale funziona"
