Added Portuguese language support.

--- a/config/locales/newspaper_container.pt-BR.yml
+++ b/config/locales/newspaper_container.pt-BR.yml
@@ -4,5 +4,5 @@ pt-BR:
       newspaper_container:     'fa fa-newspaper-o'
     select_type:
       newspaper_container:
-        name:               "Newspaper Container"
-        description:        "Newspaper container trabalhos"
+        name:               "Contêiner de jornal"
+        description:        "Obras de contêiner de jornal"
