--- a/config/locales/newspaper_article.pt-BR.yml
+++ b/config/locales/newspaper_article.pt-BR.yml
@@ -4,5 +4,9 @@ pt-BR:
       newspaper_article:     'fa fa-newspaper-o'
     select_type:
       newspaper_article:
-        name:               "Newspaper Article"
-        description:        "Newspaper article trabalhos"
+        name:               "Artigo de jornal"
+        description:        "Trabalhos de artigo de jornal"
+  simple_form:
+    labels:
+      newspaper_article:
+        alternative_title: "Subtítulo"
