--- a/config/locales/newspaper_title.pt-BR.yml
+++ b/config/locales/newspaper_title.pt-BR.yml
@@ -4,5 +4,5 @@ pt-BR:
       newspaper_title:     'fa fa-newspaper-o'
     select_type:
       newspaper_title:
-        name:               "Newspaper Title"
-        description:        "Newspaper title trabalhos"
+        name:               "Título de jornal"
+        description:        "Trabalhos de Título de Jornais"
