--- a/config/locales/newspaper_issue.zh.yml
+++ b/config/locales/newspaper_issue.zh.yml
@@ -4,7 +4,5 @@ zh:
       newspaper_issue:     'fa fa-newspaper-o'
     select_type:
       newspaper_issue:
-        # TODO: translate `human_name` into Chinese
-        name:               "Newspaper Issue"
-        # TODO: translate `human_name` into Chinese
-        description:        "Newspaper issue 作品"
+        name:               "报纸问题"
+        description:        "报纸问题有效"
