--- a/config/locales/newspaper_article.fr.yml
+++ b/config/locales/newspaper_article.fr.yml
@@ -9,4 +9,4 @@ fr:
   simple_form:
     labels:
       newspaper_article:
-        alternative_title: "Sous-titre
+        alternative_title: "Sous-titre"
