display place of publication and pub date in catalog#index view

--- a/config/locales/newspaper_works.fr.yml
+++ b/config/locales/newspaper_works.fr.yml
@@ -1,6 +1,9 @@
 ---
 fr:
   newspaper_works:
+    attributes:
+      place_of_publication:
+        label: 'Place de publication'
     newspapers_search:
       title:                    'Rechercher dans les journaux'
       text:                     'Utilisez ce formulaire pour rechercher un contenu de journal en texte intégral.'
