--- a/config/locales/newspaper_works.pt-BR.yml
+++ b/config/locales/newspaper_works.pt-BR.yml
@@ -1,6 +1,9 @@
 ---
 pt-BR:
   newspaper_works:
+    attributes:
+      place_of_publication:
+        label: 'Local de publicação'
     newspapers_search:
       title:                    'Pesquisar jornais'
       text:                     'Use este formulário para pesquisar conteúdo de jornal em texto completo.'
