--- a/config/locales/newspaper_works.en.yml
+++ b/config/locales/newspaper_works.en.yml
@@ -1,6 +1,9 @@
 ---
 en:
   newspaper_works:
+    attributes:
+      place_of_publication:
+        label: 'Place of publication'
     newspapers_search:
       title:                    'Search Newspapers'
       text:                     'Use this form to search for full-text newspaper content.'
