--- a/config/locales/newspaper_works.es.yml
+++ b/config/locales/newspaper_works.es.yml
@@ -1,6 +1,9 @@
 ---
 es:
   newspaper_works:
+    attributes:
+      place_of_publication:
+        label: 'Lugar de publicacion'
     newspapers_search:
       title:                    'Búsqueda de periódicos'
       text:                     'Utilice este formulario para buscar contenido de periódico de texto completo.'
