add publication title to search results metadata fields

--- a/config/locales/newspaper_works.pt-BR.yml
+++ b/config/locales/newspaper_works.pt-BR.yml
@@ -4,6 +4,8 @@ pt-BR:
     attributes:
       place_of_publication:
         label: 'Local de publicação'
+      publication_title:
+        label: 'Publicação'
     newspapers_search:
       title:                    'Pesquisar jornais'
       text:                     'Use este formulário para pesquisar conteúdo de jornal em texto completo.'
