--- a/config/locales/newspaper_works.en.yml
+++ b/config/locales/newspaper_works.en.yml
@@ -4,6 +4,8 @@ en:
     attributes:
       place_of_publication:
         label: 'Place of publication'
+      publication_title:
+        label: 'Publication'
     newspapers_search:
       title:                    'Search Newspapers'
       text:                     'Use this form to search for full-text newspaper content.'
