--- a/config/locales/newspaper_works.es.yml
+++ b/config/locales/newspaper_works.es.yml
@@ -4,6 +4,8 @@ es:
     attributes:
       place_of_publication:
         label: 'Lugar de publicacion'
+      publication_title:
+        label: 'Publicacion'
     newspapers_search:
       title:                    'Búsqueda de periódicos'
       text:                     'Utilice este formulario para buscar contenido de periódico de texto completo.'
