--- a/config/locales/newspaper_works.fr.yml
+++ b/config/locales/newspaper_works.fr.yml
@@ -4,6 +4,8 @@ fr:
     attributes:
       place_of_publication:
         label: 'Place de publication'
+      publication_title:
+        label: 'Publication'
     newspapers_search:
       title:                    'Rechercher dans les journaux'
       text:                     'Utilisez ce formulaire pour rechercher un contenu de journal en texte intégral.'
