--- a/config/locales/newspaper_works.it.yml
+++ b/config/locales/newspaper_works.it.yml
@@ -4,6 +4,8 @@ it:
     attributes:
       place_of_publication:
         label: 'Luogo di pubblicazione'
+      publication_title:
+        label: 'Pubblicazione'
     newspapers_search:
       title:                    'Cerca giornali'
       text:                     'Utilizzare questo modulo per cercare contenuti di giornali a testo completo.'
