--- a/config/locales/newspaper_works.zh.yml
+++ b/config/locales/newspaper_works.zh.yml
@@ -4,6 +4,8 @@ zh:
     attributes:
       place_of_publication:
         label: '出版地'
+      publication_title:
+        label: '出版物标题'
     newspapers_search:
       title:                    '搜索报纸'
       text:                     '使用此表单搜索全文报纸内容。'
