--- a/config/locales/newspaper_works.es.yml
+++ b/config/locales/newspaper_works.es.yml
@@ -41,3 +41,8 @@ es:
         oclcnum:                'OCLC #'
         publication_date_end:   'Fecha de publicación (final)'
         publication_date_start: 'Fecha de publicación (inicio)'
+
+  blacklight:
+    search:
+      fields:
+        all_text_tsimv: 'Coincidencias de palabras clave'
