--- a/config/locales/newspaper_works.fr.yml
+++ b/config/locales/newspaper_works.fr.yml
@@ -41,3 +41,8 @@ fr:
         oclcnum:                'OCLC #'
         publication_date_end:   'Date de publication (fin)'
         publication_date_start: 'Date de publication (début)'
+
+  blacklight:
+    search:
+      fields:
+        all_text_tsimv: 'Correspondances de mots clés'
