Update expandable list of search term highlighting to add  and  labelling of toggle button

--- a/config/locales/newspaper_works.de.yml
+++ b/config/locales/newspaper_works.de.yml
@@ -44,3 +44,7 @@ de:
     search:
       fields:
         all_text_tsimv: 'Keyword-Übereinstimmungen'
+      results:
+        snippets:
+          less: '<< Weniger'
+          more: 'Mehr >>'
