--- a/config/locales/newspaper_works.it.yml
+++ b/config/locales/newspaper_works.it.yml
@@ -46,3 +46,7 @@ it:
     search:
       fields:
         all_text_tsimv: 'Corrispondenze di parole chiave'
+      results:
+        snippets:
+          less: '<< Meno'
+          more: 'Più >>'
