--- a/config/locales/newspaper_works.pt-BR.yml
+++ b/config/locales/newspaper_works.pt-BR.yml
@@ -46,3 +46,7 @@ pt-BR:
     search:
       fields:
         all_text_tsimv: 'Correspondências de palavras-chave'
+      results:
+        snippets:
+          less: '<< Menos'
+          more: 'Mais >>'
