--- a/config/locales/newspaper_works.es.yml
+++ b/config/locales/newspaper_works.es.yml
@@ -48,5 +48,5 @@ es:
         all_text_tsimv: 'Coincidencias de palabras clave'
       results:
         snippets:
-          less: '<< Menos'
-          more: 'Más >>'
+          less: '<< menos'
+          more: 'más >>'
