--- a/config/locales/newspaper_works.fr.yml
+++ b/config/locales/newspaper_works.fr.yml
@@ -48,5 +48,5 @@ fr:
         all_text_tsimv: 'Correspondances de mots clés'
       results:
         snippets:
-          less: '<< Moins'
-          more: 'Plus >>'
+          less: '<< moins'
+          more: 'plus >>'
