--- a/config/locales/newspaper_works.it.yml
+++ b/config/locales/newspaper_works.it.yml
@@ -48,5 +48,5 @@ it:
         all_text_tsimv: 'Corrispondenze di parole chiave'
       results:
         snippets:
-          less: '<< Meno'
-          more: 'Più >>'
+          less: '<< meno'
+          more: 'più >>'
