Update typo in locale and move partial for parent relationship

--- a/config/locales/newspaper_works.en.yml
+++ b/config/locales/newspaper_works.en.yml
@@ -74,7 +74,7 @@ en:
 
     title_search_form:
       label:                    'Search within this newspaper'
-      placeholder:              'Search within this newzspaper...'
+      placeholder:              'Search within this newspaper...'
       front_pages_link:         'View all front pages'
 
   simple_form:
